# welsib-smpc

./: .gitignore  Cargo.toml  README.md  crt.txt
example/: .example-smpc-client-part1-password.txt  .example-smpc-client-part2-password.txt  .example-smpc-client-sum-password.txt  .example-smpc-server-password.txt  certificate.txt  clean_example.sh  client-part1.sh  client-part2.sh  client-sum.sh  make_example_input.sh  server.sh  smpc-client-part1-example-key.pem  smpc-client-part1-example-point.pem  smpc-client-part2-example-key.pem  smpc-client-part2-example-point.pem  smpc-client-sum-example-key.pem  smpc-client-sum-example-point.pem  smpc-server-example-key.pem  smpc-server-example-point.pem  smpc.conf  value-client-part1.txt.aggc  value-client-part2.txt.aggc  value-client-sum.txt.aggc
example_constructor/: README  certificate.txt  clean.sh  demo-info.txt  generate-demo-config.sh  generate-demo.sh  generate-keys-full-range.sh  part100.txt  part18.txt  part35.txt  part47.txt  run-all.sh  run-client.sh  run-demo.sh  run-server.sh  smpc.conf  verify.sh
example_old0/: .example-smpc-client-part1-gamma-key.txt  .example-smpc-client-part2-gamma-key.txt  .example-smpc-client-sum-gamma-key.txt  .example-smpc-server-gamma-key.txt  certificate.txt  certificate_test.txt  clean_example.sh  client-part1.sh  client-part2.sh  client-sum.sh  make_example_input.sh  server.sh  smpc-client-part1-example.key  smpc-client-part2-example.key  smpc-client-sum-example.key  smpc-server-example.key  smpc.conf  verify_certificate.sh
example_old1/: .example-smpc-client-part1-gamma-key.txt  (+11 more)
(+484 files in other folders)
