cargo-features = ["edition2024"]

[package]
name = "welsib-smpc"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
welsib-json = { path = "../welsib-library/welsib-json" }
welsib-random = { path = "../welsib-library/welsib-random" }
welsib-u512 = { path = "../welsib-library/welsib-u512" }
welsib-u512-ec = { path = "../welsib-library/welsib-u512-ec" }
welsib-tools = { path = "../welsib-tools" }
